<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_light"
    android:orientation="vertical"
    tools:context=".ui.adding.AddEmotionEventFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_iv"
            style="@style/ButtonBack" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_baseline_calendar_today_24"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:text="22 января , 19:00"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_theater_comedy"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:text="@string/emotion"
        android:textColor="@color/black" />


    <!--    <EditText-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@drawable/bg_white"-->
    <!--        android:layout_marginHorizontal="16dp"-->
    <!--        android:padding="10dp"-->
    <!--        android:inputType="textMultiLine"/>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_event"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:text="@string/event"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_people"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:text="@string/feeling_in_body"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_baseline_place_24"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:text="@string/my_place"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:text="@string/people"
        android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_white"
            android:drawableStart="@drawable/ic_baseline_person_pin_24"
            android:drawablePadding="4dp"
            android:gravity="center|start"
            android:padding="16dp"
            android:text="Сфера жизни"
            android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:drawableStart="@drawable/ic_psychology"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:background="@drawable/bg_white"
        android:text="Мысли"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        style="@style/TextInputLayout"
        android:hint="Что я об этом думаю?"
        app:boxStrokeColor="@null"
        app:hintTextAppearance="@style/TextLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            style="@style/EditTextInputLayout"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            app:hintTextAppearance="@style/TextLabel" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@drawable/ic_psychology"
        android:drawablePadding="4dp"
        android:gravity="center|start"
        android:padding="16dp"
        android:text="Выводы"
        android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>